Add watersheds layer

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="map"></div>
     <div class="info-panel">
-      Hey <i class="fa-solid fa-arrows-rotate"></i>
+      Hey
     </div>
   </body>
 </html>
