--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="map"></div>
     <div class="info-panel">
-      Hey
+      <div class="is-size-6 has-text-centered has-text-weight-semibold">Oregon<br>Surface drinking water sources</div>
     </div>
   </body>
 </html>
