--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,16 @@
   <body>
     <div id="map"></div>
     <div class="info-panel">
-      <div class="is-size-6 has-text-centered has-text-weight-semibold">Oregon<br>Surface drinking water sources</div>
+      <div class="panel">
+        <div class="panel-heading is-size-6 has-text-centered">Oregon<br>Surface drinking water sources</div>
+        <div class="panel-block">
+          <input id="switchRoundedDefault" type="checkbox" name="switchRoundedDefault" class="switch is-rounded is-small" checked="checked">
+          <label for="switchRoundedDefault">Enable marker placement</label>
+        </div>
+        <div class="panel-block" id="total-population"></div>
+        <div class="is-size-7" id="ws-list">
+        </div>
+      </div>
     </div>
   </body>
 </html>
