Marker icon tiny

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           <div class="panel-block" style="justify-content: center;">
             <button id="clear-marker" class="button is-small">Clear marker</button>
           </div>
-          <div class="panel-block has-text-weight-semibold" style="justify-content: center;"><img src="images/marker-icon.png">&nbsp;Connected populations</div>
+          <div class="panel-block has-text-weight-semibold" style="justify-content: center;"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
           <div class="panel-block" id="total-population"></div>
           <div class="is-size-7" id="ws-list"></div>
         </div>
