--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oregon surface drinking water watersheds</title>
+    <title>Oregon surface drinking water sources</title>
   </head>
   <body>
     <div id="map"></div>
