--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="panel">
         <div class="panel-heading is-size-6 has-text-centered">Oregon<br>surface drinking water sources</div>
         <div class="panel-block is-size-7 has-text-centered" style="justify-content: center;">
-          Click on a watershed shape<br>to discover connected populations
+          Click inside of a watershed shape<br>to discover connected populations
         </div>
         <div id="data-container" style="display: none;">
           <div class="panel-block" style="justify-content: center;">
