--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,15 @@
     <div id="map"></div>
     <div class="info-panel">
       <div class="panel">
-        <div class="panel-heading is-size-6 has-text-centered">Oregon<br>surface drinking water sources</div>
+        <div class="panel-heading is-size-6 has-text-centered">Oregon Drinking Watersheds</div>
         <div class="panel-block is-size-7 has-text-centered" style="justify-content: center;">
           Click inside of a watershed shape<br>to discover connected populations
         </div>
         <div id="data-container" style="display: none;">
-          <div class="panel-block" style="justify-content: center;">
+          <!--<div class="panel-block" style="justify-content: center;"> -->
           </div>
           <div class="panel-block has-text-weight-semibold" style="justify-content: center;"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
-          <div class="panel-block" id="total-population"></div>
+          <!-- <div class="panel-block" id="total-population"></div> -->
           <div class="is-size-7" id="ws-list"></div>
         </div>
       </div>
