--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,8 @@
           Click inside of a watershed shape<br>to discover connected populations
         </div>
         <div id="data-container" style="display: none;">
-          <!--<div class="panel-block" style="justify-content: center;"> -->
-          </div>
           <div class="panel-block has-text-weight-semibold" style="justify-content: center;"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
-          <!-- <div class="panel-block" id="total-population"></div> -->
+          <div class="panel-block" id="total-population"></div>
           <div class="is-size-7" id="ws-list"></div>
         </div>
       </div>
