--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,13 @@
         </div>
         <div id="data-container" style="display: none;">
           <div class="panel-block has-text-weight-semibold" style="justify-content: center;"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
-          <div class="panel-block" id="total-population"></div>
+          <div class="panel-block" style="justify-content: center;" id="total-population"></div>
+          <div class="panel-block is-size-7">
+            <label class="checkbox">
+              <input id="downstream" type="checkbox">
+              Show list in downstream order
+            </label>
+          </div>
           <div class="is-size-7" id="ws-list"></div>
         </div>
       </div>
