--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
     <div class="info-panel">
       <div class="panel">
         <div class="panel-heading is-size-6 has-text-centered">Oregon Drinking Watersheds</div>
-        <div class="panel-block is-size-7 has-text-centered" style="justify-content: center;">
+        <div class="panel-block is-size-7 has-text-centered is-justify-content-center">
           Click inside of a watershed shape<br>to discover connected populations
         </div>
         <div id="data-container" style="display: none;">
-          <div class="panel-block has-text-weight-semibold" style="justify-content: center;"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
-          <div class="panel-block" style="justify-content: center;" id="total-population"></div>
+          <div class="panel-block has-text-weight-semibold is-justify-content-center"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
+          <div class="panel-block is-justify-content-center" id="total-population"></div>
           <div class="panel-block is-size-7">
             <label class="checkbox">
               <input id="downstream" type="checkbox">
