--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
         </div>
         <div id="data-container" style="display: none;">
           <div class="panel-block has-text-weight-semibold is-justify-content-center"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
-          <div class="panel-block is-justify-content-center" id="total-population"></div>
+          <div id="total-population" class="has-text-centered"></div>
+          <div class="is-size-7 has-text-centered">(Numbers represent populations)</div>
           <div class="panel-block is-size-7">
             <label class="checkbox">
               <input id="downstream" type="checkbox">
