--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,7 @@
         <div class="panel-block is-size-7 has-text-centered is-justify-content-center">
           Click inside of a watershed shape<br>to discover connected populations
         </div>
-        <div class="legend-scale has-text-centered is-size-7">
-          <b>Legend</b>
-          <ul class="legend-items">
-            <li><span style='background: #AFEEEE;'></span>All</li>
-            <li><span style='background: #aaaaaa;'></span>Single</li>
-            <li><span style='background: repeating-linear-gradient(-45deg, #aaaaaa, #aaaaaa 5px, purple 3px, purple 8px);'></span>Expanded</li>
-          </ul>
-        </div>
+        <div id="legend"></div>
         <div>
           <input id="opacity-slider" class="slider is-fullwidth is-circle is-large" step="1" min="0" max="100" type="range">
           <div style="margin-top: -20px; padding-bottom: 4px;" class="has-text-centered is-size-7">Layer opacity</div>
