--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
         <div class="panel-block is-size-7 has-text-centered is-justify-content-center">
           Click inside of a watershed shape<br>to discover connected populations
         </div>
-        <div id="legend"></div>
+        <div id="legend" class="legend-container"></div>
         <div>
           <input id="opacity-slider" class="slider is-fullwidth is-circle is-large" step="1" min="0" max="100" type="range">
-          <div style="margin-top: -20px; padding-bottom: 4px;" class="has-text-centered is-size-7">Layer opacity</div>
+          <div class="opacity-slider-label">Layer opacity</div>
         </div>
         <div id="data-container" style="display: none;">
           <div class="panel-block has-text-weight-semibold is-justify-content-center"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
