Add opacity percent

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div id="legend" class="legend-container"></div>
         <div>
           <input id="opacity-slider" class="slider is-fullwidth is-circle is-large" step="1" min="0" max="100" type="range">
-          <div class="opacity-slider-label">Layer opacity</div>
+          <div class="opacity-slider-label">Layer opacity (<span id="opacity-percent"></span>%)</div>
         </div>
         <div id="data-container" style="display: none;">
           <div class="panel-block has-text-weight-semibold is-justify-content-center"><img src="images/marker-icon-tiny.png">&nbsp;Connected populations</div>
