--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oregon Drinking Watersheds</title>
+    <meta name="description" content="Discover Oregon populations and communities connected through shared drinking water sources.">
+    <meta name="keywords" content="oregon,maps,watersheds,drinking water,oregonwild,wildlife">
+    <meta property="og:title" content="Oregon Drinking Watersheds" />
+    <meta property="og:image" content="https://watersheds.oregonhowl.org/images/oregon-watersheds.jpg" />
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-KCWZ5PSCM0"></script>
